fixed category boxes layout issues

--- a/app/assets/stylesheets/categories.css.scss
+++ b/app/assets/stylesheets/categories.css.scss
@@ -29,3 +29,7 @@
 .jumbotron {
     text-align: center;
 }
+
+.category-grid-item {
+    margin-bottom: 10px;
+}
